improve java code